# binance-monitor

./: .gitignore  README.md  pyproject.toml
config/: config.yaml.example
src/binance_monitor/: main.py
src/binance_monitor/api/: __init__.py  client.py
src/binance_monitor/config/: __init__.py  settings.py
src/binance_monitor/core/: engine.py  strategy.py
src/binance_monitor/notification/: __init__.py  base.py  email_notifier.py  manager.py  models.py
tests/: manual_test_api.py  manual_test_klines.py  test_api.py  test_notification.py  test_strategy.py
